<resources>
    <string name="app_name">Organizze</string>
    <string name="CADASTRESE">CADASTRAR</string>
    <string name="Descricao">Junte-se a mais de um milhão de pessoas e comece já</string>
    <string name="Crie_Conta">Crie sua Conta Grátis</string>
    <string name="Ja_Conta">Já tenho Conta</string>

    <!--CADASTRO -->
    <string name="Nome">Nome</string>
    <string name="Email">E-mail</string>
    <string name="Senha">Senha</string>
    <string name="Termo">Termos de Uso</string>

    <!--Login -->
    <string name="Login">Login</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>